--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <div>Host: How are you doing Argentina?!?!?</div>
 	<div>Crowd: Not at all!</div>
-    <div>Host: Ok Perfect</div>
+    <div>Host: Ok Perfect!</div>
 </body>
 </html>
