--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>Argentina!! 
        
-        <p style="color:aqua;font-size:100px;"> How are you feeling?</p>
+        <p style="color:aqua;font: size 50px;"> How are you feeling?</p>
     </div>
 </body>
 </html>
