--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>World Cup 2022 FIFA </title>
 </head>
 <body>
-    <div>Argentina!! 
+    <div>
+        <p style="color:aqua;font: size 95px;"> Argentina!</p>
        
-        <p style="color:aqua;font: size 50px;"> How are you feeling?</p>
+        <p style="color:blue;font: size 80px;"> How are you feeling?</p>
     </div>
 </body>
 </html>
