--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <p style="color:aqua;font: size 9500px;"> Argentina!</p>
+        <p style="color:aqua;font-size: large;"> Argentina!</p>
        
         <p style="color:blue;font: size 8000px;"> How are you feeling??</p>
     </div>
