--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-       <h2><p style="color:aqua;font: size 950000000px;"> Argentina!</p></h2>
+       <h1><p style="color:aqua;"> Argentina!</p></h1>
        
         <p style="color:blue;font: size 8000px;"> How are you feeling??</p>
     </div>
