--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div>
-       <h1><p style="color:aqua;"> Argentina!</p></h1>
+        <p>
+            <p style="color:aqua; font-size:40px ;"> Argentina!</p>
        
         <p style="color:blue;font: size 8000px;"> How are you feeling??</p>
+    </p>
+       
     </div>
 </body>
 </html>
