--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>
             <p style="color:aqua; font-size:40px ;"> Argentina!</p>
        
-        <p style="color:blue;font: size 8000px;"> How are you feeling??</p>
+        <p style="color:blue;font-size:60px ;"> How are you feeling??</p>
     </p>
        
     </div>
