--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </p>
        
     </div>
-    <img.src = "c:\" alt = "" />
+    <img src = "https://cdn.britannica.com/69/5869-004-7D75CD05/Flag-Argentina.jpg" width="800" height="500"alt="FLAG OF ARGENTINA">
 </body>
 </html>
