--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <p> Placeholder content for your header section. Replace it with your
-          website's logo or name or page title or whatever. </p>
+        <p> <img scr=" https://www.bahia-principe.com/en/" alt = "bahia-principe" style="width: 452px; height: 140px;">
         <p>&nbsp;</p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
@@ -37,16 +36,14 @@
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
       </div>
-      <div id="tswsidecol">
-        <div id="tswsideproper">
-          <div id="tswcssbuttons">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="myinterests.html">My Interests</a></li>
-              <li><a href="mytown.html">My Town</a></li>
-            </ul>
-          </div>
+      <div id="tswcssbuttons">
+        <ul>
+        <li><a href="bahiaprincipeesmeralda.html">Bahia Principe Esmeralda</a></li>
+        <li><a href="bahiaprincipefantasia.html">Bahia Principe Fantasia</a></li>
+        <li><a href="bahiaprincipeambar.html">Bahia Principe Ambar</a></li>
+        </ul>
         </div>
+        
       </div>
       <div style="clear: both;"></div>
       <div id="tswfooter">
