--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <img scr=" https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+        <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
         <p>&nbsp;</p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
