--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css">
     <link rel="stylesheet" type="text/css" href="tswnavbar.css">
+    
   </head>
   <body>
     <div id="tswcontainer">
@@ -19,7 +20,7 @@
       <div id="tswcontent">
         <div id="tswcontproper">
           <!-- start of content column: insert your content here -->
-          <h1>Punta Cana</h1>
+          <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
           <p> Are you looking for a place to relax? </p>
           <p> If you want a navigation menu for your side column that looks like
             the one on thesitewizard.com, you can generate your own and
