--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+        <a href="index.html">
+          <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+        </a>
         <p>&nbsp;</p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
@@ -49,8 +51,7 @@
       <div style="clear: both;"></div>
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
-        <p> Placeholder content for the footer: please replace these words with
-          your real content. </p>
+        <p> </p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
