--- a/bahiaprincipeambar.html
+++ b/bahiaprincipeambar.html
@@ -17,9 +17,10 @@
 <div id="tswcontainer">
 	<div id="tswheader">
 	<!-- start of header section: insert your logo, etc, here -->
-
 	<p>
-        <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+        <a href="index.html">
+            <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+          </a>
 	</p>
 	<p>&nbsp;</p>
 
