--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div style="clear: both;"></div>
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
-        <p> </p>
+        <p><i>All credits goes to the Bahia Principe Hotels & Resorts </i></p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
