--- a/index.html
+++ b/index.html
@@ -23,18 +23,14 @@
         <div id="tswcontproper">
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
-          <p> Are you looking for a place to relax? </p>
-          <p> If you want a navigation menu for your side column that looks like
-            the one on thesitewizard.com, you can generate your own and
-            customize it, with the <a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation
-              Menu Wizard</a>. It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout
-              Wizard</a> that you used to create this. </p>
-          <p> And if you want a contact form (ie, one that your visitors can use
-            to reach you), go to the <a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback
-              Form Wizard</a> to create one. Yes, it's free too. </p>
-          <p> Okay, that's it. I've run out of meaningful things to say for this
-            placeholder content, and can't be bothered to think up any more
-            stuff that you're just going to delete anyway. </p>
+          <h2> Are you looking for a place to relax? </h2>
+          <p> Then you search for the right place! </p>
+          <p> Currently there are three available hotels for you to enjoy. </p>
+          <ul>
+            <li>Bahia Principe Esmeralda</li>
+            <li>Bahia Principe Fantasia</li>
+            <li>Bahia Principe Ambar</li>
+          </ul>
           <p> All the best for your site! </p>
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
