--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
-          <p> Then you search for the right place! </p>
-          <p> Currently there are three available hotels for you to enjoy. </p>
+          <b> Then you search for the right place! </b>
+          <b> Currently there are three available hotels for you to enjoy. </b>
           <ul>
-            <li>Bahia Principe Esmeralda</li>
-            <li>Bahia Principe Fantasia</li>
-            <li>Bahia Principe Ambar</li>
+            <li><b>Bahia Principe Esmeralda</b></li>
+            <li><b>Bahia Principe Fantasia</b></li>
+            <li><b>Bahia Principe Ambar</b></li>
           </ul>
           <p> All the best for your site! </p>
           <p>&nbsp;</p>
