--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
-          <b> Then you search for the right place! </b>
-          <b> Currently there are three available hotels for you to enjoy. </b>
+          <p><b> Then you search for the right place! </b></p>
+          <p><b> Currently there are three available hotels for you to enjoy. </b></p>
           <ul>
             <li><b>Bahia Principe Esmeralda</b></li>
             <li><b>Bahia Principe Fantasia</b></li>
