--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
           <h3> Then you search for the right place! </h3>
-          <p style="font-size: 85%;"><b> Currently there are three available hotels for you to enjoy. </b></p>
+          <h4> Currently there are three available hotels for you to enjoy. </h4>
           <ul>
             <li><b>Bahia Principe Esmeralda</b></li>
             <li><b>Bahia Principe Fantasia</b></li>
