--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
           <h3> Then you search for the right place! </h3>
-          <h4> Currently there are three available hotels for you to enjoy. </h4>
+          <h4> Currently there are three available hotels for you to enjoy: </h4>
           <ul>
             <li><b>Bahia Principe Esmeralda</b></li>
             <li><b>Bahia Principe Fantasia</b></li>
             <li><b>Bahia Principe Ambar</b></li>
           </ul>
-          <p> All the best for your site! </p>
+          <p> Each one of these hotels contains its own benefits and rules. </p>
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
       </div>
