--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><b>Bahia Principe Fantasia</b></li>
             <li><b>Bahia Principe Ambar</b></li>
           </ul>
-          <p> Each one of these hotels contains its own benefits and rules. </p>
+          <p><b>Each one of these hotels contains its own benefits and rules.</b></p>
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
       </div>
@@ -47,7 +47,7 @@
       <div style="clear: both;"></div>
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
-        <p><i>All credits goes to the Bahia Principe Hotels & Resorts </i></p>
+        <p><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
