--- a/bahiaprincipeambar.html
+++ b/bahiaprincipeambar.html
@@ -31,7 +31,7 @@
 	<div id="tswcontproper">
 	<!-- start of content column: insert your content here -->
 
-	<h1>Welcome to Bahia Principe Ambar</h1>
+	<h1>Welcome to Bahia Principe Ambar!</h1>
 	<p>
 	Placeholder content. Replace everything here with your actual content.
 	</p>
