--- a/bahiaprincipeambar.html
+++ b/bahiaprincipeambar.html
@@ -80,7 +80,7 @@
 	<!-- start of footer section: insert your copyright notice, etc, here -->
 
 	<p>
-	Placeholder content for the footer: please replace these words with your real content.
+        <b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b>
 	</p>
 
 	<!-- end of footer section: insert your copyright notice, etc, above this line -->
