--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="all" href="styles.css">
     <link rel="stylesheet" type="text/css" href="tswnavbar.css">
-    
   </head>
   <body>
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <a href="index.html">
-          <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
-        </a>
+        <p> Placeholder content for your header section. Replace it with your
+          website's logo or name or page title or whatever. </p>
         <p>&nbsp;</p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
         <div id="tswcontproper">
           <!-- start of content column: insert your content here -->
-          <h1>Punta Cana: The Best Place for Hotels and Resorts</h1>
-          <h2> Are you looking for a place to relax? </h2>
-          <h3> Then you search for the right place! </h3>
-          <h4> Currently there are three available hotels for you to enjoy: </h4>
-          <ul>
-            <li><b>Bahia Principe Esmeralda</b></li>
-            <li><b>Bahia Principe Fantasia</b></li>
-            <li><b>Bahia Principe Ambar</b></li>
-          </ul>
-          <p><b>Each one of these hotels contains its own benefits and rules.</b></p>
+          <h1>Punta Cana</h1>
+          <p> Are you looking for a place to relax? </p>
+          <p> If you want a navigation menu for your side column that looks like
+            the one on thesitewizard.com, you can generate your own and
+            customize it, with the <a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation
+              Menu Wizard</a>. It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout
+              Wizard</a> that you used to create this. </p>
+          <p> And if you want a contact form (ie, one that your visitors can use
+            to reach you), go to the <a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback
+              Form Wizard</a> to create one. Yes, it's free too. </p>
+          <p> Okay, that's it. I've run out of meaningful things to say for this
+            placeholder content, and can't be bothered to think up any more
+            stuff that you're just going to delete anyway. </p>
+          <p> All the best for your site! </p>
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
       </div>
@@ -41,13 +43,13 @@
         <li><a href="bahiaprincipefantasia.html">Bahia Principe Fantasia</a></li>
         <li><a href="bahiaprincipeambar.html">Bahia Principe Ambar</a></li>
         </ul>
-        </div>
-        
+        </div>        
       </div>
       <div style="clear: both;"></div>
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
-        <p><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></p>
+        <p> Placeholder content for the footer: please replace these words with
+          your real content. </p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
