--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <p> Placeholder content for your header section. Replace it with your
-          website's logo or name or page title or whatever. </p>
+        <p>  
+          <a href="index.html">
+          <img src="https://www.bahia-principe.com/content/image/1418144490992/logo_bahia_principe_main_2x-1_newA.jpg" alt = "bahia-principe" style="width: 452px; height: 140px;">
+        </a>
+      </p>
         <p>&nbsp;</p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
