--- a/index.html
+++ b/index.html
@@ -24,19 +24,15 @@
         <div id="tswcontproper">
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana</h1>
-          <p> Are you looking for a place to relax? </p>
-          <p> If you want a navigation menu for your side column that looks like
-            the one on thesitewizard.com, you can generate your own and
-            customize it, with the <a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation
-              Menu Wizard</a>. It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout
-              Wizard</a> that you used to create this. </p>
-          <p> And if you want a contact form (ie, one that your visitors can use
-            to reach you), go to the <a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback
-              Form Wizard</a> to create one. Yes, it's free too. </p>
-          <p> Okay, that's it. I've run out of meaningful things to say for this
-            placeholder content, and can't be bothered to think up any more
-            stuff that you're just going to delete anyway. </p>
-          <p> All the best for your site! </p>
+          <h2> Are you looking for a place to relax? </h2>
+          <h3> Then you search the right place!</h3>
+          <h4> There are three available hotels for you to enjoy:</h4>
+          <ul>
+            <li><b>Bahia Principe Esmeralda</b></li>
+            <li><b>Bahia Principe Fantasia</b></li>
+            <li><b>Bahia Principe Ambar</b></li>
+          </ul>
+          <p><b>These hotels have their own benefits and some unique rules</b></p>
           <p>&nbsp;</p>
           <!-- end of content column: put your content above this line --> </div>
       </div>
@@ -51,8 +47,7 @@
       <div style="clear: both;"></div>
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
-        <p> Placeholder content for the footer: please replace these words with
-          your real content. </p>
+        <p><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
