--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="tswcontent">
         <div id="tswcontproper">
           <!-- start of content column: insert your content here -->
-          <h1>Punta Cana</h1>
+          <h1>Punta Cana: The Best City for Hotels & Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
           <h3> Then you search the right place!</h3>
           <h4> There are three available hotels for you to enjoy:</h4>
