--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             ); 
         } 
     </script> 
+      
+    <script type="text/javascript" src=
+"https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>  
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
