--- a/bahiaprincipeesmeralda.html
+++ b/bahiaprincipeesmeralda.html
@@ -13,7 +13,20 @@
 </head>
 
 <body>
-
+	<div id="google_translate_element"></div> 
+      
+    <script type="text/javascript"> 
+        function googleTranslateElementInit() { 
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'}, 
+                'google_translate_element'
+            ); 
+        } 
+    </script> 
+      
+    <script type="text/javascript" src=
+"https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script> 
 <div id="tswcontainer">
 	<div id="tswheader">
 	<!-- start of header section: insert your logo, etc, here -->
@@ -33,7 +46,7 @@
 
 	<h1>Welcome to Bahia Principe Esmeralda!</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	In these hotel you'll find one of the luxurios furniture ever!
 	</p>
 	<p>
 	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
