--- a/gardencircusrestaurant.html
+++ b/gardencircusrestaurant.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Bahia Principe Esmeralda</title>
+<title>Bahia Principe Ambar</title>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
@@ -45,9 +45,9 @@
 	<div id="tswcontproper">
 	<!-- start of content column: insert your content here -->
 
-	<h1>Welcome to Bahia Principe Esmeralda!</h1>
+	<h1>Garden Circus Restaurant</h1>
 	<p>
-	In these hotel you'll find one of the luxurios furniture ever!
+	Placeholder content. Replace everything here with your actual content.
 	</p>
 	<p>
 	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
@@ -77,14 +77,8 @@
 	<div id="tswsidecol">
 	<div id="tswsideproper">
 	<!-- start of side column: insert your navigation menu, etc, here -->
-	<div id="tswcssbuttons">
-        <ul>
-        <li><a href="lasolasrestaurant.html">Las Olas Restaurant</a></li>
-        <li><a href="thegreek.html">The Greek</a></li>
-        <li><a href="capriccio.html">Capriccio Restaurant</a></li>
-        </ul>
-        </div>        
-      </div>
+
+	<p></p>>
 
 	<!-- end of side column: put your navigation menu, etc, above this line -->
 	</div>
