--- a/bahiaprincipeesmeralda.html
+++ b/bahiaprincipeesmeralda.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="styles.css">
 <link rel="stylesheet" type="text/css" href="tswnavbar.css">
-
+<link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon"
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 	<div id="tswcontent">
 	<div id="tswcontproper">
 	<!-- start of content column: insert your content here -->
-
+	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Esmeralda!</h1>
 	<p>
 	In these hotel you'll find one of the luxurios furniture ever!
@@ -69,7 +69,7 @@
 	All the best for your site!
 	</p>
 	<p>&nbsp;</p>
-
+    </div>
 	<!-- end of content column: put your content above this line -->
 	</div>
 	</div>
