--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="all" href="styles.css">
   <link rel="stylesheet" type="text/css" href="tswnavbar.css">
+  
   <style>
     body {
       background-image: url('https://a.travel-assets.com/findyours-php/viewfinder/images/res70/186000/186654-Puka-Beach.jpg');
       background-repeat: no-repeat;
     }
   </style>
+  <link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon"
 </head>
 <body>
   <div id="google_translate_element"></div> 
@@ -42,7 +44,7 @@
     <!-- end of header section: insert your logo, etc, above this line --> </div>
     <div id="tswcontent">
       <div id="tswcontproper">
-        <div style="display: inline-block; background-color: #2962ff;">
+        <div style="display: inline-block; background-color: #003399;">
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana: The Best City for Hotels & Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
@@ -53,7 +55,7 @@
             <li><b>Bahia Principe Fantasia</b></li>
             <li><b>Bahia Principe Ambar</b></li>
           </ul>
-          <p><b>These hotels have their own benefits and some unique rules</b></p>
+          <p><b>These hotels have their own benefits and some unique rules.</b></p>
           <p>&nbsp;</p>
         </div>
         <!-- end of content column: put your content above this line --> </div>
@@ -69,7 +71,7 @@
     <div style="clear: both;"></div>
     <div id="tswfooter">
       <!-- start of footer section: insert your copyright notice, etc, here -->
-      <span style="background-color:blue;"><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></span>
+      <span style="background-color: #003399;"><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></span>
       <!-- end of footer section: insert your copyright notice, etc, above this line -->
     </div>
   </div>
