--- a/restaurantsteakhousemeat.html
+++ b/restaurantsteakhousemeat.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="styles.css">
 <link rel="stylesheet" type="text/css" href="tswnavbar.css">
-
+<link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon"
 </head>
 
 <body>
