--- a/capriccio.html
+++ b/capriccio.html
@@ -10,6 +10,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="all" href="styles.css">
 <link rel="stylesheet" type="text/css" href="tswnavbar.css">
+
+<style>
+    body {
+      background-image: url('https://a.travel-assets.com/findyours-php/viewfinder/images/res70/186000/186654-Puka-Beach.jpg');
+      background-repeat: no-repeat;
+    }
+  </style>
 <link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon"
 </head>
 
