--- a/gardencircusrestaurant.html
+++ b/gardencircusrestaurant.html
@@ -51,7 +51,7 @@
 	<div id="tswcontent">
 	<div id="tswcontproper">
 	<!-- start of content column: insert your content here -->
-
+	<div style="display: inline-block; background-color: #003399;">
 	<h1>Garden Circus Restaurant</h1>
 	<p>
 	Placeholder content. Replace everything here with your actual content.
@@ -76,7 +76,7 @@
 	All the best for your site!
 	</p>
 	<p>&nbsp;</p>
-
+    </div>
 	<!-- end of content column: put your content above this line -->
 	</div>
 	</div>
