--- a/thegreek.html
+++ b/thegreek.html
@@ -50,7 +50,7 @@
 	<div id="tswcontent">
 	<div id="tswcontproper">
 	<!-- start of content column: insert your content here -->
-
+	<div style="display: inline-block; background-color: #003399;">
 	<h1>The Greek</h1>
 	<p>
 	Placeholder content. Replace everything here with your actual content.
@@ -75,7 +75,7 @@
 	All the best for your site!
 	</p>
 	<p>&nbsp;</p>
-
+    </div>
 	<!-- end of content column: put your content above this line -->
 	</div>
 	</div>
