--- a/bahiaprincipefantasia.html
+++ b/bahiaprincipefantasia.html
@@ -103,7 +103,7 @@
 	<!-- start of footer section: insert your copyright notice, etc, here -->
 
 	<p>
-        <b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b>
+        <span style="background-color: #003399;"><b><i>All credits goes to the Bahia Principe Hotels & Resorts </i></b></span>
 	</p>
 
 	<!-- end of footer section: insert your copyright notice, etc, above this line -->
