--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-repeat: no-repeat;
     }
   </style>
-  <link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon"
+  <link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg" type= "image/x-icon">
 </head>
 <body>
   <div id="google_translate_element"></div> 
