--- a/thegreek.html
+++ b/thegreek.html
@@ -84,7 +84,13 @@
 	<div id="tswsideproper">
 	<!-- start of side column: insert your navigation menu, etc, here -->
 
-	<p></p>>
+	<p>
+		<div id="tswcssbuttons">
+			<ul>
+			<li><a href="bahiaprincipeesmeralda.html">Bahia Principe Esmeralda</a></li>
+			</ul>
+			</div>
+	</p>
 
 	<!-- end of side column: put your navigation menu, etc, above this line -->
 	</div>
