--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1>Punta Cana: The Best City for Hotels & Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
           <h3> Then you search the right place!</h3>
-          <h4> There are three available hotels for you to enjoy:</h4>
+          <h4> There are three hotels that you can learn from in this wiki website:</h4>
           <ul>
             <li><b>Bahia Principe Esmeralda</b></li>
             <li><b>Bahia Principe Fantasia</b></li>
