--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- start of content column: insert your content here -->
           <h1>Punta Cana: The Best City for Hotels & Resorts</h1>
           <h2> Are you looking for a place to relax? </h2>
-          <h3> Then you search the right place!</h3>
+          <h3> Then you searched for the right place!</h3>
           <h4> There are three hotels that you can learn from in this wiki website:</h4>
           <ul>
             <li><b>Bahia Principe Esmeralda</b></li>
