--- a/bahiaprincipeesmeralda.html
+++ b/bahiaprincipeesmeralda.html
@@ -54,26 +54,19 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Esmeralda!</h1>
 	<p>
-	In these hotel you'll find one of the luxurios furniture ever!
+	In these hotel you'll find one of the luxurios furniture ever! Its Check-In is after 3:00 pm. Check-Out is at 12:00 pm.
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	Here is a photo of how the bedrooms look like in this hotel:
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/07/4a/0c/86/luxury-bahia-principe.jpg?w=700&h=-1&s=1" alt = "Esmeralda bedroom1" style="width: 700px; height: 467px;">
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
+    In Bahia Principe Esmeralda you'll have access to plenty of pools, entertainment areas, and a variety of restaurants.
 	</p>
 	<p>
-	All the best for your site!
+	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Menu and schedule are also included.
 	</p>
 	<p>&nbsp;</p>
     </div>
