--- a/lasolasrestaurant.html
+++ b/lasolasrestaurant.html
@@ -54,26 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Las Olas Restaurant</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	This is a Brazilian grilled meat served in tableside. Sometimes in daytime, this place becomes the buffet for the beach.
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://www.bahiaprincipeluxuryesmeralda.com/images/slides/slide-18.jpg" alt = "olasrestaurant" style="width: 1400px; height: 650px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	This restaurant has a formal dress code and it is required to do a reservation. 
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	Their schedule is at night, from 7:30 pm or 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
