--- a/thegreek.html
+++ b/thegreek.html
@@ -53,7 +53,7 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>The Greek</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	As the name says, this restaurant is a Greece theme that you can taste the sweetness of it in the Caribbean.
 	</p>
 	<p>
 	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
