--- a/thegreek.html
+++ b/thegreek.html
@@ -56,23 +56,13 @@
 	As the name says, this restaurant is a Greece theme that you can taste the sweetness of it in the Caribbean.
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://www.bahiaprincipeluxuryesmeralda.com/images/slides/slide-21.jpg" alt = "greek-restaurant" style="width: 1440px; height: 900px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	This restaurant requires a reservation and it need a semi-formal clothing. 
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	The time to arrive its at 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
