--- a/capriccio.html
+++ b/capriccio.html
@@ -54,14 +54,10 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Capriccio Restaurant</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	This is an Italian Restaurant, one of a few that is located in the hotel. 
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://media-cdn.tripadvisor.com/media/photo-p/13/79/ae/1a/comida-italiana-excelente.jpg" alt = "italian-restaurant" style="width: 550px; height: 550px";>
 	</p>
 	<p>
 	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
