--- a/thegreek.html
+++ b/thegreek.html
@@ -64,6 +64,9 @@
 	<p>
 	The time to arrive its at 8:00 pm.
 	</p>
+	<p>
+		The restaurant is located in Bahia Principe Grand Bavaro.
+	</p>
 	<p>&nbsp;</p>
     </div>
 	<!-- end of content column: put your content above this line -->
