--- a/bahiaprincipeesmeralda.html
+++ b/bahiaprincipeesmeralda.html
@@ -66,7 +66,7 @@
     In Bahia Principe Esmeralda you'll have access to plenty of pools, entertainment areas, and a variety of restaurants.
 	</p>
 	<p>
-	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Menu and schedule are also included.
+	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
 	</p>
 	<p>&nbsp;</p>
     </div>
