--- a/bahiaprincipefantasia.html
+++ b/bahiaprincipefantasia.html
@@ -54,26 +54,19 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Fantasia!</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	This hotel contains lots of entertainment, mostly for children, and a wonderful experience!
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	In the following you'll see a peek of the rooms in this hotel:
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	<img src=" https://www.bahia-principe.com/content/image/m/1418240329415/256fantasia.jpg" alt = "Fantasia bedroom1" style="width: 600px; height: 400px;">
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
+	Bahia Principe Fantasia is one of the exclusive hotels in wich by having this access, you can enter any hotels in the area (If you're under 18, you can't enter Bahia Principe Ambar).
 	</p>
 	<p>
-	All the best for your site!
+	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
 	</p>
 	<p>&nbsp;</p>
     </div>
