--- a/capriccio.html
+++ b/capriccio.html
@@ -60,16 +60,10 @@
 	<img src="https://media-cdn.tripadvisor.com/media/photo-p/13/79/ae/1a/comida-italiana-excelente.jpg" alt = "italian-restaurant" style="width: 550px; height: 550px";>
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	A traditional italian cuisine. Taste the italian dishes in the caribbean. Semi-formal clothing is required. 
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	This restaurant opens at 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
