--- a/dicebahia.html
+++ b/dicebahia.html
@@ -7,6 +7,15 @@
     <title>Bahia Principe Special Dice</title>
     <link rel="stylesheet" href="dicebahia.css">
     <link rel="stylesheet" type="text/css" href="tswnavbar.css">
+    <style>
+        body {
+          background-image: url('https://a.travel-assets.com/findyours-php/viewfinder/images/res70/186000/186654-Puka-Beach.jpg');
+          background-repeat: no-repeat;
+        }
+      </style>
+      <link rel="icon" href="https://media-cdn.tripadvisor.com/media/photo-s/06/b5/f8/47/bahiaprincipe-hotels.jpg"
+
+      type="image/x-icon">
 </head>
 <body>
     <h1>Click on the dice to have a chance to win tickects to the hotel of your dreams!</h1>
