--- a/mainbuffetlarimar.html
+++ b/mainbuffetlarimar.html
@@ -54,14 +54,10 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Main Buffet Larimar</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	This is an international buffet. Stay comfy in this awesome atmosphere.
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://media-cdn.tripadvisor.com/media/photo-s/14/73/31/2d/larimar-v18560795.jpg" alt = "buffetlarimar" style="width: 550px; height: 450px;">
 	</p>
 	<p>
 	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
