--- a/mainbuffetlarimar.html
+++ b/mainbuffetlarimar.html
@@ -60,16 +60,10 @@
 	<img src="https://media-cdn.tripadvisor.com/media/photo-s/14/73/31/2d/larimar-v18560795.jpg" alt = "buffetlarimar" style="width: 550px; height: 450px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	This buffet has 3 different schedules. Breakfeast: 7:00 am - 10:30 am. Lunch: 12:30 pm - 3:00 pm. Dinner: 7:00 pm - 11:00 pm.
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	In here you'll need to be wearing footwear and cover-up or t-shirt. 
 	</p>
 	<p>&nbsp;</p>
     </div>
