--- a/lasolasrestaurant.html
+++ b/lasolasrestaurant.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Bahia Principe Ambar</title>
+<title>Las Olas Restaurant</title>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
