--- a/bahiaprincipeambar.html
+++ b/bahiaprincipeambar.html
@@ -54,26 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Welcome to Bahia Principe Ambar!</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	In here you'll experience peace and fun at the same time. Here's one of the rooms:
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/18/82/13/8b/luxury-bahia-principe.jpg?w=600&h=-1&s=1" alt = "ambar-room" style="width: 569px; height: 380px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	This hotel is only for 18+ years (no kids allowed). Is an exclusive hotel for adults to enjoy!
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	In the corner of the website you'll see three buttons, those are restaurants in the hotel that you can check out and learn from them. Schedule is included.
 	</p>
 	<p>&nbsp;</p>
     </div>
