--- a/ilparadisorestaurant.html
+++ b/ilparadisorestaurant.html
@@ -54,26 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Il Paradiso Restaurant</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	An italian restaurant located in Bahia Principe Fantasia!
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://media-cdn.tripadvisor.com/media/photo-m/1280/1c/a0/a5/bf/il-paradiso-restaurant.jpg" alt = "ilparadiso" style="width: 1280px; height: 720px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	Clothing is semi-formal and reservation is required.
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	The time for this restaurant is at 7:30 pm or 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
