--- a/limborestaurant.html
+++ b/limborestaurant.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Bahia Principe Ambar</title>
+<title>Limbo Restaurant</title>
 
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
@@ -54,26 +54,16 @@
 	<div style="display: inline-block; background-color: #003399;">
 	<h1>Limbo Restaurant</h1>
 	<p>
-	Placeholder content. Replace everything here with your actual content.
+	This is a gourmet cuisine. "Elegance emobodied through food". 
 	</p>
 	<p>
-	If you want a navigation menu for your side column that looks like the one on thesitewizard.com,
-	you can generate your own and customize it, with the
-	<a href="https://www.thesitewizard.com/wizards/css-menu-buttons.shtml">Navigation Menu Wizard</a>.
-	It's free, just like the <a href="https://www.thesitewizard.com/wizards/layout.shtml">Layout Wizard</a>
-	that you used to create this.
+	<img src="https://media-cdn.tripadvisor.com/media/photo-s/1c/9f/b6/2e/limbo-restaurant.jpg" alt = "limbo-restaurant" style="width: 550px; height: 367px;">
 	</p>
 	<p>
-	And if you want a contact form (ie, one that your visitors can use to reach you), go to the
-	<a href="https://www.thesitewizard.com/wizards/feedbackform.shtml">Feedback Form Wizard</a>
-	to create one. Yes, it's free too.
+	Gentlemen must be formal. Reservation is required and it is adults only.
 	</p>
 	<p>
-	Okay, that's it. I've run out of meaningful things to say for this placeholder content, and can't be bothered to
-	think up any more stuff that you're just going to delete anyway.
-	</p>
-	<p>
-	All the best for your site!
+	The time for the restaurant is 7:30 pm or 8:00 pm.
 	</p>
 	<p>&nbsp;</p>
     </div>
